fix: career card background and chain icons alignment in hacktable (#86)

--- a/src/components/DetailedListView.scss
+++ b/src/components/DetailedListView.scss
@@ -63,7 +63,7 @@
       }
 
       &:hover {
-        background-color: colors.$gray-100;
+        background-color: colors.$primary-25;
       }
 
       .title.and.intro {
