--- a/src/views/careers/vacancies/VacancyCard.scss
+++ b/src/views/careers/vacancies/VacancyCard.scss
@@ -8,7 +8,7 @@
 .job.vacancy.card:not(.container) {
   padding: 24px 24px 28px;
   gap: 24px;
-  background: colors.$white;
+  background: colors.$base-white;
   border: 1px solid colors.$gray-200;
   border-radius: 16px;
   transition: all 50ms ease-in;
