--- a/src/views/hack-database/HackTable.scss
+++ b/src/views/hack-database/HackTable.scss
@@ -44,6 +44,12 @@
     display: block;
   }
 
+  .chain-icons {
+    display: flex;
+    flex-direction: row;
+    gap: 2px;
+  }
+
   .description {
     background-color: colors.$primary-25;
   }
